test alignment issue1

--- a/blocks/philosophy/philosophy.css
+++ b/blocks/philosophy/philosophy.css
@@ -2,7 +2,7 @@
 .philosophy {
   padding: 6rem 3rem;
   background: #000;
-  text-align: center;
+  text-align: left;
 }
 
 .philosophy-container {
